added new link to merged issue in NewTools

--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
                 <div class="carousel-container">
                     <h2 class="animate__animated animate__fadeInDown">Refining Code Critics</h2>
                     <h3 class="animate__animated animate__fadeInDown text-light">Pharo Consortium</h3>
-                    <p class="animate__animated animate__fadeInUp">Code critiques are super important while developing software systems.
-                         They help developers to find source code sections which code quality is subject of analysis while they are writing or
-                          reading code.</p>
+                    <p class="animate__animated animate__fadeInUp">Code critiques are super important while developing software systems. They help developers to find source code sections which code quality is subject of analysis while they are writing or reading code.</p>
                     <a href="https://summerofcode.withgoogle.com/projects/?sp-search=Alejandra%20Cossio#6095801345900544" target="_blank" class="btn-get-started animate__animated animate__fadeInUp">See the GSOC
                         proposal</a>
                 </div>
@@ -93,43 +91,42 @@
 
         <!-- ======= Features Section ======= -->
         <section class="features">
-        <div class="container">
-            <!-- ======== Project Goals =======-->
-            <div class="section-title">
-                <h2>Project Goals</h2>
-                <p>In the initial proposal, the list of project’s goals were:</p>
-            </div>
-
-            <div class="row">
-                <div class="col-md-12 pt-4">
-
-                    <ul>
-                        <li><i class="bi bi-check"></i>Improving code critiques descriptions.</li>
-                        <li><i class="bi bi-check"></i>Updating the source code comparison view for a split interface.
-                        </li>
-                        <li><i class="bi bi-check"></i>Fixing the “automatically resolve this issue” option to follow a sequence from code selection for a better user experience.</li>
-                        <li><i class="bi bi-check"></i>Enhancing code critiques global browser.</li>
-                        <li><i class="bi bi-x"></i>Building, testing and integrating profiles. The structure and classification will be coordinated with experienced users.</li>
-                    </ul>
+            <div class="container">
+                <!-- ======== Project Goals =======-->
+                <div class="section-title">
+                    <h2>Project Goals</h2>
+                    <p>In the initial proposal, the list of project’s goals were:</p>
                 </div>
-            </div>
-            <!-- End Project Goals -->
 
-            <!-- ======== Changes to the Proposal =======-->
-            <div class="section-title">
-                <h2>Changes to the Proposal</h2>
-                <p>
-                    <a href="#" onClick="return false;"><span
+                <div class="row">
+                    <div class="col-md-12 pt-4">
+
+                        <ul>
+                            <li><i class="bi bi-check"></i>Improving code critiques descriptions.</li>
+                            <li><i class="bi bi-check"></i>Updating the source code comparison view for a split interface.
+                            </li>
+                            <li><i class="bi bi-check"></i>Fixing the “automatically resolve this issue” option to follow a sequence from code selection for a better user experience.</li>
+                            <li><i class="bi bi-check"></i>Enhancing code critiques global browser.</li>
+                            <li><i class="bi bi-x"></i>Building, testing and integrating profiles. The structure and classification will be coordinated with experienced users.</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- End Project Goals -->
+
+                <!-- ======== Changes to the Proposal =======-->
+                <div class="section-title">
+                    <h2>Changes to the Proposal</h2>
+                    <p>
+                        <a href="#" onClick="return false;"><span
                                 title="CriticBrowser is a graphical tool that allows developers to select a list of software packages and a list of quality rules This resulting on a new list of critiques that broke the selected rules.">CriticBrowser</span>
                         </a> uses a deprecated version of <a href="https://github.com/pharo-spec/Spec" target="_blank"><span
                                 title="Spec is a framework in Pharo for describing user interfaces">Spec</span></a>. Therefore, implementing the new enhancements directly was not feasible without first migrating the CriticBrowser to the Spec2 version.
-                    I created my own repository to do the migrations as Pharo10 was in release at the moment; Therefore, 
-                    the last project goal was replaced by CriticBrowser migration. After these changes, the rest of project goals were done.
-                </p>
+                        I created my own repository to do the migrations as Pharo10 was in release at the moment; Therefore, the last project goal was replaced by CriticBrowser migration. After these changes, the rest of project goals were done.
+                    </p>
+                </div>
+                <!-- End Changes to the Proposal -->
+
             </div>
-            <!-- End Changes to the Proposal -->
-                
-        </div>
         </section>
         <!-- End Features Section -->
 
@@ -185,29 +182,26 @@
                         <div class="timeline-heading">
                             <h4 class="timeline-title">Work package 3 — Enhancing code critiques global browser</h4>
                             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Updating UI for selecting packages and rules</small>
-                        </p>
+                            </p>
                         </div>
                         <div class="timeline-body">
-                            <p> I've updated the user interface for selecting packages and rules. 
-                                This to make it more intuitive for anyone who wants to use it.
-                                Some examples in detail are in the <a href="portfolio.html" target="_blank"> enhancements section</a>.
-                                </p>
-                                <hr>
-                                <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
-                                    <div class="portfolio-item">
-                                        <img src="assets/img/updateSelectPackage.jpeg" class="img-fluid" alt="">
-                                        <div class="portfolio-info">
-                                            <!-- <h3>Example 1</h3> -->
-                                            <div>
-                                                <a href="assets/img/updateSelectPackage.jpeg" class="portfolio-lightbox" 
-                                                title="Example of old version and new version when selecting rules."><i
+                            <p> I've updated the user interface for selecting packages and rules. This to make it more intuitive for anyone who wants to use it. Some examples in detail are in the <a href="portfolio.html" target="_blank"> enhancements section</a>.
+                            </p>
+                            <hr>
+                            <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
+                                <div class="portfolio-item">
+                                    <img src="assets/img/updateSelectPackage.jpeg" class="img-fluid" alt="">
+                                    <div class="portfolio-info">
+                                        <!-- <h3>Example 1</h3> -->
+                                        <div>
+                                            <a href="assets/img/updateSelectPackage.jpeg" class="portfolio-lightbox" title="Example of old version and new version when selecting rules."><i
                                                         class="bx bx-plus"></i></a>
-                                                <!-- <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
-                                            </div>
+                                            <!-- <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </div>
                 </li>
                 <li data-aos="fade-up">
@@ -215,28 +209,26 @@
                         <div class="timeline-heading">
                             <h4 class="timeline-title">Work package 3 — Enhancing code critiques global browser</h4>
                             <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Refining Critic Browser for ① quality rules and ② rule's critiques</small>
-                        </p>
+                            </p>
                         </div>
                         <div class="timeline-body">
-                            <p> I improved the flow of the tool to make it more intuitive for anyone who wants to use it. 
-                                These changes are notable mainly in ① quality rules and ② rule critiques.
-                                Some examples in detail are in the <a href="portfolio.html" target="_blank"> enhancements section</a>.</p>
-                                <hr>
-                                <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
-                                    <div class="portfolio-item">
-                                        <img src="assets/img/CBParts.png" class="img-fluid" alt="">
-                                        <div class="portfolio-info">
-                                            <!-- <h3>Example 1</h3> -->
-                                            <div>
-                                                <a href="assets/img/CBParts.png" class="portfolio-lightbox" 
-                                                title="① quality rules and ② rule critiques sections where the changes are most remarkable. "><i
+                            <p> I improved the flow of the tool to make it more intuitive for anyone who wants to use it. These changes are notable mainly in ① quality rules and ② rule critiques. Some examples in detail are in the <a href="portfolio.html"
+                                    target="_blank"> enhancements section</a>.</p>
+                            <hr>
+                            <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
+                                <div class="portfolio-item">
+                                    <img src="assets/img/CBParts.png" class="img-fluid" alt="">
+                                    <div class="portfolio-info">
+                                        <!-- <h3>Example 1</h3> -->
+                                        <div>
+                                            <a href="assets/img/CBParts.png" class="portfolio-lightbox" title="① quality rules and ② rule critiques sections where the changes are most remarkable. "><i
                                                         class="bx bx-plus"></i></a>
-                                                <!-- <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
-                                            </div>
+                                            <!-- <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </div>
                 </li>
                 <li class="timeline-inverted" data-aos="fade-up">
@@ -247,9 +239,8 @@
                         </div>
                         <div class="timeline-body">
                             <p>
-                                I've improved the Changes Browser view. This view is called when a critique has the 
-                                "automatically resolve this issue" option. The new version has the option to show the changes
-                                in <a href="https://github.com/Lin777/UnifiedVersions" target="_blank">unified view</a> and split view.
+                                I've improved the Changes Browser view. This view is called when a critique has the "automatically resolve this issue" option. The new version has the option to show the changes in <a href="https://github.com/Lin777/UnifiedVersions"
+                                    target="_blank">unified view</a> and split view.
                             </p>
                             <hr>
                             <div class="col-lg-12 col-md-12 portfolio portfolio-wrap filter-app">
@@ -258,8 +249,7 @@
                                     <div class="portfolio-info">
                                         <!-- <h3>Example 1</h3> -->
                                         <div>
-                                            <a href="assets/img/changesBrowser.png" class="portfolio-lightbox" 
-                                            title="Example of old version and new version of Changes Browser when a critique has transform."><i
+                                            <a href="assets/img/changesBrowser.png" class="portfolio-lightbox" title="Example of old version and new version of Changes Browser when a critique has transform."><i
                                                     class="bx bx-plus"></i></a>
                                             <!-- <a href="portfolio-details.html" title="Portfolio Details"><i class="bx bx-link"></i></a> -->
                                         </div>
@@ -277,8 +267,8 @@
                             <h4 class="timeline-title">Work package 5 - New version of Critic Browser and Changes Browser in Pharo10!</h4>
                         </div>
                         <div class="timeline-body">
-                            <p>The new version brings many improvements in user interface and implementation. 
-                                All of these are summarized in <a href="https://github.com/pharo-project/pharo/pull/9773" target="_blank">issue #9773</a>.</p>
+                            <p>The new version brings many improvements in user interface and implementation. All of these are summarized in <a href="https://github.com/pharo-project/pharo/pull/9773" target="_blank">issue #9773</a>. After some improvements,
+                                the tool was integrated to the repository NewTools of Pharo <a href="https://github.com/pharo-spec/NewTools/pull/289" target="_blank">issue #289</a>.</p>
                         </div>
                     </div>
                 </li>
@@ -287,7 +277,7 @@
         <!-- End Timeline Section-->
 
         <!-- ======= Video Section ======= -->
-       <!--  <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+        <!--  <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
             <div class="container">
 
                 <div class="row">
@@ -325,17 +315,12 @@
                 <div class="section-title">
                     <h2>Conclusion</h2>
                     <p>
-                        In short, this summer was focused on fixing bugs, updating interfaces and adding new features
-                         for the Critic Browser and Changes Browser. These changes will help Pharo developers to not
-                          have to inspect method by method to see if there are critiques in it and fix them. In addition,
-                          enhancing the "automatically resolve this issue" option. 
-                           Nevertheless, there are still quite a few things pending that I hope to work on.
+                        In short, this summer was focused on fixing bugs, updating interfaces and adding new features for the Critic Browser and Changes Browser. These changes will help Pharo developers to not have to inspect method by method to see if there are critiques in
+                        it and fix them. In addition, enhancing the "automatically resolve this issue" option. Nevertheless, there are still quite a few things pending that I hope to work on.
                     </p>
                     <br>
                     <p>
-                        I have also considerably improved my knowledge of describing user interfaces with Spec
-                         and defining quality rules with Renraku. Also, I feel much more comfortable
-                          programming in Pharo.
+                        I have also considerably improved my knowledge of describing user interfaces with Spec and defining quality rules with Renraku. Also, I feel much more comfortable programming in Pharo.
                     </p>
                 </div>
             </div>
@@ -347,9 +332,7 @@
                 <div class="section-title">
                     <h2>After GSoC'21</h2>
                     <p>
-                        Critiques, rules, and interfaces are a big area that are actively developed and maintained. 
-                        I plan on continuing to contribute and learn of the Pharo projects, and hope to be an
-                         active member of the open source community.
+                        Critiques, rules, and interfaces are a big area that are actively developed and maintained. I plan on continuing to contribute and learn of the Pharo projects, and hope to be an active member of the open source community.
                     </p>
                 </div>
             </div>
